--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>滲透測試 Web</h1>
-							<p>台科大資安研究社幹部 基隆商工資安顧問 Contact me <a href="https://www.facebook.com/profile.php?id=100009717251061">FB</a> / <a href="https:sectools.tw">Sectools.tw</a></p>
+							<p><strong>台科大資安研究社幹部</strong> <br> <strong>台灣駭客年會 PEN-101負責人</strong> <br> Contact me <a href="https://www.facebook.com/profile.php?id=100009717251061">FB</a> / <a href="https:sectools.tw">Sectools.tw</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -35,10 +35,10 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>個人介紹</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>哈囉~歡迎來到我的個人網頁.</strong> <br> 我的名字是徐牧遠,是一名熱愛資安的高中生,也有各項專長和興趣. <br> 如果想看到更詳細的內容請往下滑:D</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -46,35 +46,181 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>專業技能&興趣</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+								<li class="icon solid fa-laptop">滲透測試</li>
+								<li class="icon solid fa-code">Web 前端開發</li>
+								<li class="icon solid fa-signal">數位鑑識</li>
+								<li class="icon solid fa-cog">電腦硬體維護</li>
+								<li class="icon solid fa-map-marker-alt">生存遊戲</li>
+								<li class="icon solid fa-bolt">滑板</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>資安相關經歷</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+
+							<h2 class="mb-5">幹部經歷</h2>
+							<table class="table ">
+								<tbody><tr>
+									<th>單位</th>
+									<th>職位</th>
+								</tr>
+								<tr>
+								  <td>Sectools.tw</td>
+								  <td>網站管理員</td>
+								</tr>
+								<tr>
+								  <td>HITCON 台灣駭客年會</td>
+								  <td>Penetration_Testing-101 單位負責人</td>
+								</tr>
+								 <tr>
+									<td>台灣科技大學 資訊安全研究社   </td>
+									<td>學術幹部</td>
+								  </tr>
+								  <tr>
+									<td>台灣科技大學 資訊安全研究社</td>
+									<td>滲透測試實務講師</td>
+								  </tr>
+								  <tr>
+									<td>台灣科技大學 資訊安全研究社</td>
+									<td>社團網站管理員</td>
+								  </tr>
+								  <tr>
+									<td>Cotpear</td>
+									<td>網站合夥人 站點管理員</td>
+								  </tr>
+								  <tr>
+									<td>三重商工 資安培訓 Discord Server</td>
+									<td>伺服器站點站長</td>
+								  </tr>
+								  <tr>
+									<td>三重商工 選手練習伺服器</td>
+									<td>伺服器站點管理員</td>
+								  </tr>
+								  <tr>
+									<td>基隆商工 科學創客社</td>
+									<td>社長</td>
+								  </tr>
+							</tbody></table>
+
+
+							<h2 class="mb-5">演講/授課紀錄</h2>
+							<table class="table ">
+								<tbody><tr>
+									<th>演講/授課單位</th>
+									<th>主題</th>
+								</tr>
+								 <tr>
+									<td>台灣科技大學 資訊安全研究社   </td>
+									<td>滲透測試實務</td>
+								  </tr>
+								  <tr>
+									<td>三重商工 資訊安全選手培訓講師</td>
+									<td>資訊安全 網路概論 滲透測試</td>
+								  </tr>
+							</tbody></table>
+
+							<h2 class="mb-5">獲獎紀錄</h2>
+							<table class="table ">
+								<tbody><tr>
+									<th>比賽名稱</th>
+									<th>名次</th>
+								</tr>
+								 <tr>
+									<td>勞動部 全國技能競賽 網路安全</td>
+									<td>第五名</td>
+								  </tr>
+								  <tr>
+									<td>AIS3 Club 教育部先進資通安全人才實務培育計畫 幹部人才培訓 CTF奪旗賽</td>
+									<td>第二名</td>
+								  </tr>
+								  <tr>
+									<td>109資訊月資訊應用技能競賽 Python</td>
+									<td>全國第二名</td>
+								  </tr>
+								  <tr>
+									<td>109資訊月資訊應用技能競賽 Python</td>
+									<td>北區第一名</td>
+								  </tr>
+								  <tr>
+									<td>三重商工 CTF奪旗賽</td>
+									<td>第一名</td>
+								  </tr>
+								  <tr>
+									<td>三重商工 網路安全模擬賽</td>
+									<td>第二名</td>
+								  </tr>
+							</tbody></table>
+
+							<h2 class="mb-5">資安培訓紀錄</h2>
+							<table class="table ">
+								<tbody><tr>
+									<th>名稱</th>
+									<th>單位</th>
+								</tr>
+								 <tr>
+									<td>AIS3 Club 教育部先進資通安全實務人才培育計畫 幹部人才培訓</td>
+									<td>教育部</td>
+								  </tr>
+								  <tr>
+									<td>教育部先進資通安全實務人才培育計畫 基礎逆向工程</td>
+									<td>教育部</td>
+								  </tr>
+								  <tr>
+									<td>教育部先進資通安全實務人才培育計畫 台灣少年駭客人才培訓營</td>
+									<td>教育部</td>
+								  </tr>
+								  <tr>
+									<td>SITCON 學生計算機年會</td>
+									<td>SITCON</td>
+								  </tr>
+								  <tr>
+									<td>Cyber Range 資安實戰攻防演練中心</td>
+									<td>勞動部</td>
+								  </tr>
+								  <tr>
+									<td>三重商工 資安培訓</td>
+									<td>三重商工</td>
+								  </tr>
+							</tbody></table>
+
+							<h2 class="mb-5">資安證照</h2>
+							<table class="table ">
+								<tbody><tr>
+									<th>名稱</th>
+									<th>認證單位</th>
+								</tr>
+								 <tr>
+									<td>OSCP (預計高三考取)</td>
+									<td>Offensive Security</td>
+								  </tr>
+								  <tr>
+									<td>OSWE (預計大二考取)</td>
+									<td>Offensive Security</td>
+								  </tr>
+								  <tr>
+									<td>OSWP (預計大三考取)</td>
+									<td>Offensive Security</td>
+								  </tr>
+								  <tr>
+									<td>OSEP (預計碩一考取)</td>
+									<td>Offensive Security</td>
+								  </tr>
+							</tbody></table>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>活動相關照片</h3>
+										<p>這邊是我在資安圈裡面的相關照片<br>雖然說有些不是照片就是了</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -89,8 +235,6 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -104,8 +248,6 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -120,18 +262,7 @@
 					</section>
 
 				<!-- Section -->
-					<section>
-						<header>
-							<h2>Duis sed adpiscing veroeros amet</h2>
-						</header>
-						<div class="content">
-							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
-							<ul class="actions">
-								<li><a href="#" class="button primary large">Get Started</a></li>
-								<li><a href="#" class="button large">Learn More</a></li>
-							</ul>
-						</div>
-					</section>
+				
 
 				<!-- Elements -->
 				<!--
@@ -407,37 +538,21 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
-							<form>
-								<div class="fields">
-									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="button primary" /></li>
-								</ul>
-							</form>
+
 						</div>
 						<footer>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">aifred0729tw@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">(+886) 909-681308</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>You can't find me.:D</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
