--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>You can't find me.:D</span>
+									<span>You can't find me :D</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
