--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>個人介紹</h2>
 						</header>
 						<div class="content">
-							<p><strong>哈囉~歡迎來到我的個人網頁.</strong> <br> 我的名字是徐牧遠,是一名熱愛資安的高中生,也有各項專長和興趣. <br> 如果想看到更詳細的內容請往下滑:D</p>
+							<p><strong>哈囉~歡迎來到我的個人網頁.</strong> <br> 我的名字是徐牧遠,是一名熱愛資安的高中,對於滲透測試領域非常的感興趣也非常的有熱情。目前正預計購買Offensive Security 的 Learn Unlimited 課程, 也期待能夠更進一步了解滲透測試, 非常希望能在以後加入 Red Team 成為滲透測試工程師。</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
