--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>滲透測試 Web</h1>
-							<p><strong>台科大資安研究社幹部</strong> <br> <strong>台灣駭客年會 PEN-101負責人</strong> <br> Contact me <a href="https://www.facebook.com/profile.php?id=100009717251061">FB</a> / <a href="https:sectools.tw">Sectools.tw</a></p>
+							<p><strong>台科大資安研究社 學術長</strong> <br> <strong>DEVCORE 實習生</strong> <br> Contact me <a href="https://www.facebook.com/profile.php?id=100009717251061">FB</a> / <a href="https:sectools.tw">Sectools.tw</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -38,7 +38,7 @@
 							<h2>個人介紹</h2>
 						</header>
 						<div class="content">
-							<p><strong>哈囉~歡迎來到我的個人網頁.</strong> <br> 我的名字是徐牧遠,是一名熱愛資安的高中,對於滲透測試領域非常的感興趣也非常的有熱情。目前正預計購買Offensive Security 的 Learn Unlimited 課程, 也期待能夠更進一步了解滲透測試, 非常希望能在以後加入 Red Team 成為滲透測試工程師。</p>
+							<p><strong>哈囉~歡迎來到我的個人網頁.</strong> <br> 我的名字是徐牧遠,是一名熱愛資安的高中生,對於紅隊演練領域非常的感興趣也非常的有熱情。目前正預計購買Offensive Security 的 Learn Unlimited 課程, 也期待能夠更進一步了解紅隊演練, 非常希望能在以後成為一名紅隊演練專家。</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -51,9 +51,9 @@
 						<div class="content">
 							<ul class="feature-icons">
 								<li class="icon solid fa-laptop">滲透測試</li>
-								<li class="icon solid fa-code">Web 前端開發</li>
+								<li class="icon solid fa-code">Web Security</li>
 								<li class="icon solid fa-signal">數位鑑識</li>
-								<li class="icon solid fa-cog">電腦硬體維護</li>
+								<li class="icon solid fa-cog">Binary Security</li>
 							</ul>
 						</div>
 					</section>
@@ -72,12 +72,16 @@
 									<th>職位</th>
 								</tr>
 								<tr>
-								  <td>HITCON 台灣駭客年會</td>
-								  <td>Penetration_Testing-101 單位負責人</td>
+								  <td>HITCON 2022</td>
+								  <td>逢甲黑客社x台科資安社 Village 單位負責人</td>
+								</tr>
+								<tr>
+								  <td>HITCON 2021</td>
+								  <td>台科資安社x逢甲黑客社 Village 單位負責人</td>
 								</tr>
 								 <tr>
 									<td>台灣科技大學 資訊安全研究社   </td>
-									<td>學術幹部</td>
+									<td>學術長</td>
 								  </tr>
 								  <tr>
 									<td>台灣科技大學 資訊安全研究社</td>
@@ -86,22 +90,6 @@
 								  <tr>
 									<td>台灣科技大學 資訊安全研究社</td>
 									<td>社團網站管理員</td>
-								  </tr>
-								  <tr>
-									<td>Sectools.tw</td>
-									<td>網站管理員</td>
-								  </tr>
-								  <tr>
-									<td>Cotpear</td>
-									<td>網站合夥人 站點管理員</td>
-								  </tr>
-								  <tr>
-									<td>三重商工 資安培訓 Discord Server</td>
-									<td>伺服器站點站長</td>
-								  </tr>
-								  <tr>
-									<td>三重商工 選手練習伺服器</td>
-									<td>伺服器站點管理員</td>
 								  </tr>
 								  <tr>
 									<td>基隆商工 科學創客社</td>
@@ -117,7 +105,11 @@
 									<th>主題</th>
 								</tr>
 								 <tr>
-									<td>台灣科技大學 資訊安全研究社   </td>
+									<td>HITCON 2022 Workshop</td>
+									<td>Injection 101</td>
+								  </tr>
+								 <tr>
+									<td>台灣科技大學 資訊安全研究社</td>
 									<td>滲透測試實務</td>
 								  </tr>
 								  <tr>
@@ -134,7 +126,15 @@
 								</tr>
 								 <tr>
 									<td>勞動部 全國技能競賽 網路安全</td>
+									<td>第三名</td>
+								  </tr>
+								 <tr>
+									<td>勞動部 全國技能競賽 網路安全</td>
 									<td>第五名</td>
+								  </tr>
+								 <tr>
+									<td>2022 T 貓盃全國資安基礎實務能力競賽 高中職組</td>
+									<td>特優</td>
 								  </tr>
 								  <tr>
 									<td>AIS3 Club 教育部先進資通安全人才實務培育計畫 幹部人才培訓 CTF奪旗賽</td>
