--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						</header>
 						<div class="content">
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">滲透測試</li>
+								<li class="icon solid fa-laptop">紅隊演練</li>
 								<li class="icon solid fa-code">Web Security</li>
 								<li class="icon solid fa-signal">數位鑑識</li>
 								<li class="icon solid fa-cog">Binary Security</li>
