--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Red's Website</h1>
-							<p><strong>台科大資安研究社 學術長</strong> <br> <strong>DEVCORE 實習生</strong> <br> Contact me <a href="https://www.facebook.com/profile.php?id=100009717251061">FB</a> / <a href="https:sectools.tw">Sectools.tw</a></p>
+							<p><strong>台科大資安研究社 學術長</strong> <br> <strong>DEVCORE 實習生</strong> <br> Contact me on <a href="https://www.facebook.com/profile.php?id=100009717251061">Facebook</a>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -46,7 +46,7 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>專業技能&興趣</h2>
+							<h2>專業技能</h2>
 						</header>
 						<div class="content">
 							<ul class="feature-icons">
